Fixed Spacing of Images in Help Section

--- a/custom/custom.css
+++ b/custom/custom.css
@@ -536,16 +536,12 @@ a:hover {
 
 .help .description img {
     display: block;
-    margin: 20px auto;
+    margin: 15px auto;
     max-width: 80%;
 }
 
-.help table {
-    margin-bottom: 25px;
-}
-
 .help td {
-    padding: 15px 0 0 15px;
+    padding-left: 15px;
 }
 
 .help ol {
